--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
 <body>
 
 <h2>Haydn Newport's Git Achievements <img src='http://www.gravatar.com/avatar/3e4b65a50b24521af506cd378bdf6428'/></h2>
-Unlocked 8/51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 38 points<br>
+Unlocked 8/51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 42 points<br>
 <ul>
 <li><div class="title">Apprentice Author (Level 1)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Apprentice Historian (Level 1)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
 <li><div class="title">Apprentice Historian (Level 2)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
+<li><div class="title">Apprentice Historian (Level 3)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
 <li><div class="title">Apprentice Hunter (Level 1)</div>  <div class="info">Used <a href="http://www.kernel.org/pub/software/scm/git/docs/git-bisect.html">git-bisect</a> to perform a binary search to find which change introduced a bug.</div></li>
 <li><div class="title">Apprentice Hunter (Level 2)</div>  <div class="info">Used <a href="http://www.kernel.org/pub/software/scm/git/docs/git-bisect.html">git-bisect</a> to perform a binary search to find which change introduced a bug.</div></li>
 <li><div class="title">Apprentice Hunter (Level 3)</div>  <div class="info">Used <a href="http://www.kernel.org/pub/software/scm/git/docs/git-bisect.html">git-bisect</a> to perform a binary search to find which change introduced a bug.</div></li>
@@ -30,18 +31,22 @@ Unlocked 8/51 <a href="http://github.com/icefox/git-achievements">Git Achievemen
 Git commands sorted by usage:
 <pre style="text-align: left">
      39 bisect
-      4 log
+      6 log
       4 diff
       3 show
+      3 help
       3 add
+      2 status
       2 remote
-      2 help
       2 commit
       2 clone
       2 achievements
-      1 status
+      1 tag
+      1 reset
+      1 rebase
       1 grep
       1 config
+      1 checkout
       1 blame
 </pre>
 <script type="text/javascript">
