--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Haydn Newport's Git Achievements <img src='http://www.gravatar.com/avatar/3e4b65a50b24521af506cd378bdf6428'/></h2>
-Unlocked 9/51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 44 points<br>
+Unlocked 10/51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 46 points<br>
 <ul>
 <li><div class="title">Apprentice Author (Level 1)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Apprentice Blacksmith (Level 1)</div>  <div class="info">Created a branch using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-checkout.html">git-checkout</a> -b.</div></li>
@@ -20,6 +20,7 @@ Unlocked 9/51 <a href="http://github.com/icefox/git-achievements">Git Achievemen
 <li><div class="title">Apprentice Hunter (Level 1)</div>  <div class="info">Used <a href="http://www.kernel.org/pub/software/scm/git/docs/git-bisect.html">git-bisect</a> to perform a binary search to find which change introduced a bug.</div></li>
 <li><div class="title">Apprentice Hunter (Level 2)</div>  <div class="info">Used <a href="http://www.kernel.org/pub/software/scm/git/docs/git-bisect.html">git-bisect</a> to perform a binary search to find which change introduced a bug.</div></li>
 <li><div class="title">Apprentice Hunter (Level 3)</div>  <div class="info">Used <a href="http://www.kernel.org/pub/software/scm/git/docs/git-bisect.html">git-bisect</a> to perform a binary search to find which change introduced a bug.</div></li>
+<li><div class="title">Apprentice Merchant (Level 1)</div>  <div class="info">Added an external repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-remote.html">git-remote</a> add.</div></li>
 <li><div class="title">Apprentice Miller (Level 1)</div>  <div class="info">Add only part of a file to the stage 3 times with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a> -p.</div></li>
 <li><div class="title">Apprentice Presenter (Level 1)</div>  <div class="info">Shows one or more objects (blobs, trees, tags and commits) with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-show.html">git-show</a></div></li>
 <li><div class="title">Apprentice Stone Mason (Level 1)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
@@ -36,16 +37,17 @@ Git commands sorted by usage:
       4 diff
       4 add
       3 show
+      3 remote
       3 help
       3 commit
       2 status
-      2 remote
       2 rebase
       2 clone
       2 checkout
       2 achievements
       1 tag
       1 reset
+      1 init
       1 grep
       1 config
       1 blame
@@ -86,7 +88,6 @@ There are 51 Achievements. Some achievements can be leveled up depending on the 
 <li><div class="title">Investigator</div><div class="info">Used <a href="http://www.kernel.org/pub/software/scm/git/docs/git-blame.html">git-blame</a> to annotate a file with information about how each line changed.</div></li>
 <li><div class="title">Let there be light</div><div class="info">Commit without a parent.</div></li>
 <li><div class="title">Locksmith</div><div class="info">Add Signed-off-by line at the end of the commit log message using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a> -s.</div></li>
-<li><div class="title">Merchant</div><div class="info">Added an external repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-remote.html">git-remote</a> add.</div></li>
 <li><div class="title">Messenger</div><div class="info">Applied a patch using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-am.html">git-am</a>.</div></li>
 <li><div class="title">News Reader</div><div class="info">Show logs with difference each commit introduces with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-whatchanged.html">git-whatchanged</a></div></li>
 <li><div class="title">Pedantic</div><div class="info">Use the flow extension to encourage an orderly and standardized branching model</div></li>
